[package]
name = "redes"
version = "0.1.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
jack = "0.6.5"
nom = "5.1"
bumpalo = {version = "3.4", features=["collections"]}

[features]
rt-alloc-panic = []